# VAE_scRNA

./: .gitattributes  .gitignore  LICENSE.md  README.md  VAE.ipynb  dp_VAE.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python.yml
data/V1_Mouse_Brain_Sagittal_Anterior_Section_2/spatial/: scalefactors_json.json  tissue_positions_list.csv
dp_VAE/: __main__.py  dp_VAE.py  functions.py  main.py  train_eval.py  utils.py
tests/: __init__.py  test_geometry_utils.py  test_mask_k.py  test_stress_metric.py  test_training.py  test_training_pipeline.py  test_training_smoke.py  test_utils.py  test_vae_model.py
